--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,12 +5,14 @@ on:
     - cron: "0 3 * * *"   # todo dia 03:00 UTC
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (não precisa do repo, apenas salva o output)
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Generate metrics
         uses: lowlighter/metrics@latest
@@ -21,12 +23,9 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
-          # Plugins bacanas (todos funcionam com GITHUB_TOKEN):
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
           plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css
+          plugin_languages_ignored: html, css
           plugin_languages_details: percentage
           plugin_topics: yes
           plugin_topics_mode: mastered
