--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write   # precisa para commitar o metrics.svg
 
 jobs:
   build:
@@ -17,19 +17,41 @@ jobs:
       - name: Generate metrics
         uses: lowlighter/metrics@latest
         with:
-          filename: assets/metrics.svg
           token: ${{ secrets.GITHUB_TOKEN }}
           user: bione-dev
+          filename: assets/metrics.svg
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
+          config_animations: yes
+          repositories_affiliations: owner, collaborator
+          repositories_forks: yes
+
+          # Calendário anual (3D opcional)
           plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+
+          # Linguagens (mais rico)
           plugin_languages: yes
-          plugin_languages_ignored: html, css
-          plugin_languages_details: percentage
-          plugin_topics: yes
-          plugin_topics_mode: mastered
+          plugin_languages_limit: 10
+          plugin_languages_indepth: yes
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_ignored: html, css, scss
+          # plugin_languages_skipped: repo1, repo2   # (se precisar excluir)
+
+          # Hábitos de código (gráficos bonitos)
+          plugin_habits: yes
+          plugin_habits_charts: yes
+          plugin_habits_trim: yes
+
+          # Conquistas (badgezinhas)
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+
+          # Follow-up (issues/PRs por repositório)
           plugin_followup: yes
+          plugin_followup_sections: repositories
 
       - name: Commit metrics
         run: |
