--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,12 +1,12 @@
 name: GitHub Metrics
 
 on:
-  schedule:
-    - cron: "0 3 * * *"   # todo dia 03:00 UTC
   workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * *"
 
 permissions:
-  contents: write   # precisa para commitar o metrics.svg
+  contents: write
 
 jobs:
   build:
@@ -14,8 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Generate metrics
-        uses: lowlighter/metrics@latest
+      - name: Generate metrics (stable, light)
+        uses: lowlighter/metrics@v3.34
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: bione-dev
@@ -23,35 +23,24 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
-          config_animations: yes
-          repositories_affiliations: owner, collaborator
+          config_animations: no                   # menos carga
+          repositories_affiliations: owner,collaborator
           repositories_forks: yes
 
-          # Calendário anual (3D opcional)
+          # Calendário (leve)
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
-          # Linguagens (mais rico)
+          # Linguagens (leve - SEM indepth)
           plugin_languages: yes
-          plugin_languages_limit: 10
-          plugin_languages_indepth: yes
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 6
+          plugin_languages_indepth: no            # <- causa OOM; desligado
+          plugin_languages_details: percentage
           plugin_languages_ignored: html, css, scss
-          # plugin_languages_skipped: repo1, repo2   # (se precisar excluir)
 
-          # Hábitos de código (gráficos bonitos)
-          plugin_habits: yes
-          plugin_habits_charts: yes
-          plugin_habits_trim: yes
-
-          # Conquistas (badgezinhas)
+          # (opcional) conquistas compactas – barato
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_secrets: yes
-
-          # Follow-up (issues/PRs por repositório)
-          plugin_followup: yes
-          plugin_followup_sections: repositories
 
       - name: Commit metrics
         run: |
